--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,11 @@ body * {
 #container {
   /* Borda */
   /* border: 1px solid purple; */
-  width: 360px;
+  width: 100%;
+  max-width: 360px;
   margin: 56px auto 0px;
+
+  padding: 0 24px;
 }
 
 #profile img {
