change background based on media queries

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
   background: var(--fundo) no-repeat top center/cover;
   transition: all 300ms ease-in-out;
+  height: 100vh;
 }
 
 body * {
@@ -170,4 +171,15 @@ footer {
 
 .toggle-input {
   opacity: 0;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
