--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,10 @@ footer {
   transition: all 300ms ease-in-out;
 }
 
+.lblBotao:hover {
+  outline: 8px solid (var(--highlight-color));
+}
+
 .toggle-input:checked ~ .slider > .button {
   left: 40px;
 }
